# LogAnalysis

./: .env.example  .gitignore  demo.py  main.py  pyproject.toml  report.md
logginganalysis/: __init__.py  __main__.py  analyzer.py
logginganalysis/chunking/: __init__.py  splitter.py  strategies.py
logginganalysis/config/: __init__.py  settings.py
logginganalysis/extraction/: __init__.py  chains.py  extractor.py  prompts.py
logginganalysis/integration/: __init__.py  chains.py  integrator.py  prompts.py  search_tool.py
logginganalysis/mcp/: __init__.py  server.py  tools.py
logginganalysis/models/: __init__.py  chunk.py  extraction.py  integration.py  progress.py  report.py
logginganalysis/reporting/: __init__.py  formatters.py  generator.py
logginganalysis/utils/: __init__.py  exceptions.py  logging_config.py  rate_limiter.py
tests/: conftest.py
tests/fixtures/: __init__.py  mock_responses.py  sample_logs.py
tests/test_chunking/: __init__.py  test_splitter.py
tests/test_config/: test_settings.py
tests/test_extraction/: __init__.py  test_extractor.py  test_none_result.py  test_order_and_progress.py
tests/test_mcp/: __init__.py  test_tools.py
tests/test_models/: __init__.py  test_chunk.py  test_extraction.py
tests/test_reporting/: __init__.py  test_formatters.py
tests/test_utils/: __init__.py  test_logging.py  test_rate_limiter.py
